# RocketChatMobilePushGateway

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  HandlerFactory.cpp  HandlerFactory.h  LICENSE  README.md  Settings.cpp  Settings.h  date.h  main.cpp  utils.cpp  utils.h
docker-buildenv/: Dockerfile
handlers/: ApplePushHandler.cpp  ApplePushHandler.h  GooglePushHandler.cpp  GooglePushHandler.h  NorFoundHandler.cpp  NorFoundHandler.h  NotFoundHandler.cpp  NotFoundHandler.h  TestHandler.cpp  TestHandler.h
k8s/: config.yaml  deployment.yaml  secret.yaml  service.yaml
models/: ApplePushModel.cpp  ApplePushModel.h  ForwardGatewayModel.cpp  ForwardGatewayModel.h  GatewayNotification.cpp  GatewayNotification.h  GooglePushModel.cpp  GooglePushModel.h
